--- a/examples/index.html
+++ b/examples/index.html
@@ -7,7 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/summernote@0.9.0/dist/summernote-lite.min.css" rel="stylesheet">
-    <link href="../dist/summernote-grid.css" rel="stylesheet">
+    <link href="../src/summernote-grid.css" rel="stylesheet">
 </head>
 <body class="bg-light">
     <div class="container py-5">
@@ -32,7 +32,7 @@
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.7.1/dist/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/summernote@0.9.0/dist/summernote-lite.min.js"></script>
-    <script src="../dist/summernote-grid.js"></script>
+    <script src="../src/summernote-grid.js"></script>
     <script>
         $('#editor').summernote({
             minHeight: 300,
